added form to update user information

--- a/Public/members.html
+++ b/Public/members.html
@@ -5,6 +5,10 @@
   <title>users name</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Favicon -->
+  <link rel="shortcut icon" href="./assets/images/favicons/red-chilli-vector.png" >
+  <link rel="apple-touch-icon" href="./assets/images/favicons/red-chilli-vector.png">
+  <link rel="icon" href="./assets/images/favicons/red-chilli-vector.png">
   <!-- font-awesome CDN -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js" integrity="sha256-KzZiKy0DWYsnwMF+X1DvQngQ2/FxF7MF3Ff72XcpuPs="crossorigin="anonymous"></script>
   <!-- Google Fonts Link -->
@@ -50,60 +54,82 @@
     <h4>Hello user</h4>
     <!-- section 1 -->
       <section class="row">
-        <div class="col s12 m12 l6 xl6">
+        <!-- account settings -->
+        <div class="col s12 m6">
+
           <!-- Button edit account settings -->
-          <button class="account-dropdown-btn">
+          <button id="dropdown-account-btn">
             <i class="material-icons right">arrow_drop_down</i>Edit account settings
           </button>
-            <!-- button triggers a jQuery drop down -->
-            <div id="account-settings">
-              <ul class="account">
-                <!-- first name -->
-                <li class="Valign-start">
-                  <span>Wayne</span>
-                  <button class="edit-btn">
-                    <i class="material-icons">edit</i>
-                  </button>
-                </li>
-                <!-- last name -->
-                <li class="Valign-start">
-                  <span>Griffiths</span>
-                  <button class="edit-btn">
-                    <i class="material-icons">edit</i>
-                  </button>
-                </li>
-                <!-- email -->
-                <li class="Valign-start">
-                  <span>wayne.c.griffiths@gmail.com</span>
-                  <button class="edit-btn">
-                    <i class="material-icons">edit</i>
-                  </button>
-                </li>
-                <!-- password -->
-                <li class="Valign-start">
-                  <span>**********</span>
-                  <button class="edit-btn">
-                    <i class="material-icons">edit</i>
-                  </button>
-                </li>
-              </ul>
-            </div>
+
+          <!-- button triggers a jQuery drop down -->
+          <div id="account-settings" class="">
+            <ul class="account">
+              <!-- first name -->
+              <li class="Valign-between">
+                <div class="Valign-center">
+                  <span class="label">First name:</span>
+                  <span class="data xgap-tiny">Wayne</span>
+                </div>
+                <button class="edit-btn">
+                  <i class="material-icons">edit</i>
+                </button>
+              </li>
+              <!-- last name -->
+              <li class="Valign-between">
+                <div class="Valign-center">
+                  <span class="label">Last name:</span>
+                  <span class="data xgap-tiny">Griffiths</span>
+                </div>
+                <button class="edit-btn">
+                  <i class="material-icons">edit</i>
+                </button>
+              </li>
+              <!-- email -->
+              <li class="Valign-between">
+                <div class="Valign-center">
+                  <span class="label">Email:</span>
+                  <span class="data xgap-tiny">wayne.c.griffiths@gmail.com</span>
+                </div>
+                <button class="edit-btn">
+                  <i class="material-icons">edit</i>
+                </button>
+              </li>
+              <!-- password -->
+              <li class="Valign-between">
+                <div class="Valign-center">
+                  <span class="label">Password:</span>
+                  <span class="data xgap-tiny"> Secret</span>
+                </div>
+                <button class="edit-btn">
+                  <i class="material-icons">edit</i>
+                </button>
+              </li>
+            </ul>
+          </div>
         </div>
-          <!--  edit preferences -->
-        <div class="col s12 m12 l6 xl6">
-          <button class="account-dropdown-btn">
+          <!--  user preferences -->
+        <div class="col s12 m6">
+          <!-- button user preferences -->
+          <button id="dropdown-preferences-btn">
             <i class="material-icons right">arrow_drop_down</i>Edit your preferences
           </button>
-          <div id="user-preferences">
+          <!-- button triggers jQuery drop down -->
+          <div id="user-preferences" class="">
             <h5>Diets</h5>
-            <ul>
+            <ul class="preferences">
   
               <!-- each diet will appear here -->
-              <li class="user-diet Valign-start">
+              <li class="user-diet Valign-between">
               	<span>Vegan</span>
-              	<button class="edit-btn">
-              	    <i class="material-icons">edit</i>
-              	</button>
+              	<div>
+                    <button class="edit-btn">
+                  	    <i class="material-icons">edit</i>
+                    </button>
+                    <button class="remove-btn">
+                      <i class="material-icons">delete</i>
+                    </button>
+                </div>
               </li>
   
             </ul>
@@ -112,11 +138,16 @@
             <ul>
   
               <!-- Each allergy will be here -->
-              <li class="user-allergy Valign-start">
+              <li class="user-allergy Valign-between">
                 <span>Nut allergy</span>
-                <button class="edit-btn">
-                  <i class="material-icons">edit</i>
-                </button>
+                <div>
+                  <button class="edit-btn">
+                    <i class="material-icons">edit</i>
+                  </button>
+                  <button class="remove-btn">
+                    <i class="material-icons">delete</i>
+                  </button>
+                </div>
               </li>
   
             </ul>
@@ -133,13 +164,15 @@
 
               <!-- Each recipe will be here as a list -->
               <li class="authored-recipe Valign-start">
-                <span>recipe title</span>
-                <button class="edit-btn">
-                  <i class="material-icons">edit</i>
-                </button>
-                <button class="remove-btn">
-                  <i class="material-icons">delete</i>
-                </button>
+                <span class="data xgap-tiny">recipe title</span>
+                <div>
+                  <button class="edit-btn">
+                    <i class="material-icons">edit</i>
+                  </button>
+                  <button class="remove-btn">
+                    <i class="material-icons">delete</i>
+                  </button>
+                </div>
               </li>
 
             </ul>
@@ -167,9 +200,11 @@
 
   </footer>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="js/members.js"></script>
-  <script type="text/javascript" src="javascript/members/index.js"></script>
+<!-- Jquery -->
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<!-- Compiled and minified JavaScript -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+<script id="index" type="text/javascript" src="./assets/javascript/members/index.js"></script>
 
 </body>
 
