created the undo method

--- a/Public/create-recipe.html
+++ b/Public/create-recipe.html
@@ -63,7 +63,7 @@
                         <label for="create-description" class="truncate">Description: e.g perfect winter warmer</label>
                     </div>
                     <!-- image input field -->
-                    <div class="file-field input-field feature-left">
+                    <div class="file-field input-field">
                         <div class="btn">
                             <span>image</span>
                             <input type="file" accept="image/*" id="image-file">
