updating branch to current state (login error)

--- a/Public/index.html
+++ b/Public/index.html
@@ -40,7 +40,7 @@
         </div>
 
         <div class="coloured-section">
-          <a id="sign-in-button" class="btn-floating waves-effect waves-light z-depth-3" href="/signup.html">
+          <a id="sign-in-button" class="btn-floating waves-effect waves-light z-depth-3" href="/login.html">
             <i class="tiny material-icons">person</i>
           </a>
         </div>
