--- a/Public/login.html
+++ b/Public/login.html
@@ -42,7 +42,7 @@
     <!-- ================================= Log in =================================== -->
     <section class="sign-in">
       <h4>Sign in</h4>
-      <form id="sign-in" >
+      <form id="sign-in" action="/auth/login" method="POST">
   
         <!-- email -->
         <div class="input-field">
@@ -52,7 +52,7 @@
   
         <!-- password -->
         <div class="input-field">
-          <input id="sign-in-password" type="password" >
+          <input id="sign-in-password" type="password" name="userPass">
           <label for="sign-in-password">password</label>
         </div>
   
