commit before merge

--- a/Public/login.html
+++ b/Public/login.html
@@ -42,7 +42,7 @@
     <!-- ================================= Log in =================================== -->
     <section class="sign-in">
       <h4>Sign in</h4>
-      <form id="sign-in" action="/auth/login" method="POST">
+      <form id="sign-in" action="/" method="POST">
   
         <!-- email -->
         <div class="input-field">
