illegal arguments error fixed, issues remain

--- a/Public/login.html
+++ b/Public/login.html
@@ -42,7 +42,7 @@
     <!-- ================================= Log in =================================== -->
     <section class="sign-in">
       <h4>Sign in</h4>
-      <form id="sign-in" action="/" method="POST">
+      <form id="sign-in" action="/auth/login" method="POST">
   
         <!-- email -->
         <div class="input-field">
@@ -72,7 +72,7 @@
       <button id="join-btn" class="btn">
         <i class="material-icons right">arrow_drop_down</i>Join right now
       </button>
-      <form id="sign-up" action="/auth/login" method="POST">
+      <form id="sign-up" action="/auth/register" method="POST">
 
         <!-- email -->
         <div class="input-field">
