added patch method at the user dashboard

--- a/Public/members.html
+++ b/Public/members.html
@@ -68,7 +68,7 @@
               <!-- first name -->
               <li class="Valign-between account">
                 <div class="Valign-center">
-                  <span class="label">First name:</span>
+                  <span class="label" data-field="first_name">First name:</span>
                   <span class="data xgap-tiny">Wayne</span>
                 </div>
                 <div>
@@ -80,7 +80,7 @@
               <!-- last name -->
               <li class="Valign-between account">
                 <div class="Valign-center">
-                  <span class="label">Last name:</span>
+                  <span class="label" data-field="last_name">Last name:</span>
                   <span class="data xgap-tiny">Griffiths</span>
                 </div>
                 <div>
@@ -92,7 +92,7 @@
               <!-- email -->
               <li class="Valign-between account">
                 <div class="Valign-center">
-                  <span class="label">Email:</span>
+                  <span class="label" data-field="email">Email:</span>
                   <span class="data xgap-tiny">wayne.c.griffiths@gmail.com</span>
                 </div>
                 <div>
@@ -104,7 +104,7 @@
               <!-- password -->
               <li class="Valign-between account">
                 <div class="Valign-center">
-                  <span class="label">Password:</span>
+                  <span class="label" data-field="password">Password:</span>
                   <span class="data xgap-tiny"> Secret</span>
                 </div>
                 <div>
@@ -130,7 +130,7 @@
               <!-- each diet will appear here -->
               <li class="user-diet Valign-between">
                 <div>
-                  <span class="label">Diet:</span>
+                  <span class="label" data-field="diets">Diet:</span>
                 	<span class="data xgap-tiny">Vegan</span>
                 </div>
               	<div>
@@ -151,7 +151,7 @@
               <!-- Each allergy will be here -->
               <li class="user-allergy Valign-between">
                 <div>
-                  <span class="label">Allergy:</span>
+                  <span class="label" data-field="allergy">Allergy:</span>
                   <span class="data xgap-tiny">Nut allergy</span>
                 </div>
                 <div>
