created a loading loading spinner and an autoscroll function for UX

--- a/Public/index.html
+++ b/Public/index.html
@@ -230,6 +230,8 @@
     <script src="./assets/javascript/getChips.js"></script>
     <script src="./assets/javascript/index/getQueries.js"></script>
     <script src="./assets/javascript/getDropdownValues.js"></script>
+    <script src="./assets/javascript/createThumbnail.js"></script>
+    <script src="./assets/javascript/index/autoScroll.js"></script>
     <script src="./assets/javascript/index/index.js"></script>   
 </body>
 
