redirects for logged in users,logout notfunctional

--- a/Public/members.html
+++ b/Public/members.html
@@ -39,6 +39,10 @@
         <div class="divider-filler"></div>
       </div>
 
+      <form action="/logout?_method=DELETE" method="POST" >
+        <button type="submit">logout</button>
+      </form>
+
       <div class="coloured-section">
         <a id="sign-in-button" class="btn-floating waves-effect waves-light z-depth-3" href="/signup.html">
           <i class="tiny material-icons">person</i>
