--- a/Public/login.html
+++ b/Public/login.html
@@ -1,127 +1,148 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Sign in</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!-- Materialize css -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
+    <!--  MDC icons-->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <!-- Google Fonts Link -->
+    <link
+      href="https://fonts.googleapis.com/css?family=Fugaz+One&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Patrick+Hand&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playball&display=swap"
+      rel="stylesheet"
+    />
+    <!-- custom css -->
+    <link href="./assets/css/login/style.css" rel="stylesheet" />
+    <link href="./assets/css/nav.css" rel="stylesheet" />
+  </head>
 
-<head>
-  <title>Sign in</title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Materialize css -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
-  <!--  MDC icons-->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-  <!-- Google Fonts Link -->
-  <link href="https://fonts.googleapis.com/css?family=Fugaz+One&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Patrick+Hand&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Playball&display=swap" rel="stylesheet">
-  <!-- custom css -->
-  <link href="./assets/css/login/style.css" rel="stylesheet">
-  <link href="./assets/css/nav.css" rel="stylesheet">
-</head>
+  <body>
+    <!-- NavBar -->
+    <nav>
+      <h3>Recipedia</h3>
+      <div class="divider-container">
+        <div class="divider">
+          <img src="./assets/images/green-chilli.png" alt="" />
+          <div class="divider-bottom"></div>
+          <div class="divider-top"></div>
+          <div class="divider-filler"></div>
+        </div>
 
-<body>
-
-  <!-- NavBar -->
-  <nav>
-    <h3>Recipedia</h3>
-    <div class="divider-container">
-
-      <div class="divider">
-        <img src="./assets/images/green-chilli.png" alt=""/>
-        <div class="divider-bottom"></div>
-        <div class="divider-top"></div>
-        <div class="divider-filler"></div>
+        <div class="coloured-section"></div>
       </div>
+    </nav>
 
-      <div class="coloured-section"></div>
-      
-    </div>
-  </nav>
+    <!-- container -->
+    <main class="container layout">
+      <!-- ================================= Log in =================================== -->
+      <section class="sign-in">
+        <h4>Sign in</h4>
+        <form id="sign-in" action="/auth/login" method="POST">
+          <!-- email -->
+          <div class="input-field">
+            <input id="sign-in-email" type="text" name="userEmail" />
+            <label for="sign-in-email">email</label>
+          </div>
 
-  <!-- container -->
-  <main class="container layout">
-    <!-- ================================= Log in =================================== -->
-    <section class="sign-in">
-      <h4>Sign in</h4>
-      <form id="sign-in" action="/auth/login" method="POST">
-  
-        <!-- email -->
-        <div class="input-field">
-          <input id="sign-in-email" type="text" name="userEmail">
-          <label for="sign-in-email">email</label>
-        </div>
-  
-        <!-- password -->
-        <div class="input-field">
-          <input id="sign-in-password" type="password" name="userPass">
-          <label for="sign-in-password">password</label>
-        </div>
-  
-        <!-- submit button -->
-        <button id="sign-in-btn" type="submit" class="btn">
-          <i class=" material-icons right">chevron_right</i>let's go
+          <!-- password -->
+          <div class="input-field">
+            <input id="sign-in-password" type="password" name="userPass" />
+            <label for="sign-in-password">password</label>
+          </div>
+
+          <!-- submit button -->
+          <button id="sign-in-btn" type="submit" class="btn">
+            <i class="material-icons right">chevron_right</i>let's go
+          </button>
+        </form>
+      </section>
+
+      <div class="section-break"></div>
+
+      <section class="sign-up">
+        <!-- ================================= Sign up =================================== -->
+        <h4>Not a member?</h4>
+        <button id="join-btn" class="btn">
+          <i class="material-icons right">arrow_drop_down</i>Join right now
         </button>
-  
-      </form>
-    </section>
+        <form id="sign-up" action="/auth/register" method="POST">
+          <!-- user name-->
+          <div class="input-field">
+            <input id="sign-up-user-name" type="text" name="regUserName" />
+            <label for="sign-up-user-name">user name</label>
+          </div>
 
-    <div class="section-break"></div>
+          <!-- email -->
+          <div class="input-field">
+            <input id="sign-up-email" type="text" name="regEmail" />
+            <label for="sign-up-email">email</label>
+          </div>
 
-    <section class="sign-up">
-      <!-- ================================= Sign up =================================== -->
-      <h4>Not a member?</h4>
-      <button id="join-btn" class="btn">
-        <i class="material-icons right">arrow_drop_down</i>Join right now
-      </button>
-      <form id="sign-up" action="/auth/register" method="POST">
+          <!-- password -->
+          <div class="input-field">
+            <input id="sign-up-password" type="password" name="regPass" />
+            <label for="sign-up-password">password</label>
+          </div>
 
-        <!-- email -->
-        <div class="input-field">
-          <input id="sign-up-email" type="text" name="regEmail">
-          <label for="sign-up-email">email</label>
-        </div>
-  
-        <!-- password -->
-        <div class="input-field">
-          <input id="sign-up-password" type="password" name="regPass">
-          <label for="sign-up-password">password</label>
-        </div>
-  
-        <!-- confirm password -->
-        <div class="input-field">
-          <input id="sign-up-confirm-password" type="password" name="regConfirmPass">
-          <label for="sign-up-confirm-password">confirm password</label>
-        </div>
+          <!-- confirm password -->
+          <div class="input-field">
+            <input
+              id="sign-up-confirm-password"
+              type="password"
+              name="regConfirmPass"
+            />
+            <label for="sign-up-confirm-password">confirm password</label>
+          </div>
 
-        <!-- first name -->
-        <div class="input-field">
-          <input id="sign-up-first-name" type="text" name="regFirstName">
-          <label for="sign-up-first-name">first name</label>
-        </div>
-  
-        <!-- last name -->
-        <div class="input-field">
-          <input id="sign-up-last-name" type="text" name="regLastName">
-          <label for="sign-up-last-name">last name</label>
-        </div>
+          <!-- first name -->
+          <div class="input-field">
+            <input id="sign-up-first-name" type="text" name="regFirstName" />
+            <label for="sign-up-first-name">first name</label>
+          </div>
 
-        <small class="small-text">Your name is used to identify any recipes you create!</small>
-  
-        <!-- submit button -->
-        <button id="sign-up-btn" type="submit" class="btn">
-          <i class=" material-icons right">chevron_right</i>sign me up!
-        </button>
-      </form>
-    </section>
+          <!-- last name -->
+          <div class="input-field">
+            <input id="sign-up-last-name" type="text" name="regLastName" />
+            <label for="sign-up-last-name">last name</label>
+          </div>
 
-  </main>
- 
-  <!-- jQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <!-- materialize js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-  <!-- custom CSS -->
-  <script type="text/javascript" src="./assets/javascript/login.js"></script>
-  <script type="text/javascript" src="./assets/javascript/login-logic.js"></script>
-</body>
+          <small class="small-text"
+            >Your name is used to identify any recipes you create!</small
+          >
 
+          <!-- submit button -->
+          <button id="sign-up-btn" type="submit" class="btn">
+            <i class="material-icons right">chevron_right</i>sign me up!
+          </button>
+        </form>
+      </section>
+    </main>
+
+    <!-- jQuery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <!-- materialize js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- custom CSS -->
+    <script type="text/javascript" src="./assets/javascript/login.js"></script>
+    <script
+      type="text/javascript"
+      src="./assets/javascript/login-logic.js"
+    ></script>
+  </body>
 </html>
