created a functions to render and display the modal

--- a/Public/index.html
+++ b/Public/index.html
@@ -25,6 +25,7 @@
     <link rel="stylesheet" href="./assets/css/buttons.css"/> 
     <link rel="stylesheet" href="./assets/css/nav.css"/> 
     <link rel="stylesheet" href="./assets/css/index.css"/> 
+    <link rel="stylesheet" href="./assets/css/styleHelpers.css"/> 
   </head> 
   <body>
     <!-- NavBar -->
@@ -169,7 +170,10 @@
                   2.) How many of those items you can be bothered typing in.
                 </li>
                 
-                <div id="in-my-fridge"class="chips"></div>
+                <div class="Valign-start">
+                  <div id="in-my-fridge"class="chips"></div>
+                  <i id="search-fridge-button" class="material-icons xgap-tiny">search</i>
+                </div>
                 
               </ul>
 
@@ -231,7 +235,7 @@
     <script src="./assets/javascript/index/getQueries.js"></script>
     <script src="./assets/javascript/getDropdownValues.js"></script>
     <script src="./assets/javascript/createThumbnail.js"></script>
-    <script src="./assets/javascript/index/autoScroll.js"></script>
+    <script src="./assets/javascript/index/scrollToView.js"></script>
     <script src="./assets/javascript/index/index.js"></script>   
 </body>
 
