created delete route and ajax front end to delete a recipe from the memeber.html dashboard

--- a/Public/members.html
+++ b/Public/members.html
@@ -179,7 +179,7 @@
               <!-- Each recipe will be here as a list -->
               <li class="authored-recipe Valign-start">
                 <div>
-                  <span class="label"></span>
+                  <span class="label">title</span>
                   <span class="data xgap-tiny">recipe title</span>
                 </div>
                 <div>
