--- a/Public/index.html
+++ b/Public/index.html
@@ -236,6 +236,7 @@
     <script src="./assets/javascript/getDropdownValues.js"></script>
     <script src="./assets/javascript/createThumbnail.js"></script>
     <script src="./assets/javascript/index/scrollToView.js"></script>
+    <script src="./assets/javascript/index/noScroll.js"></script>
     <script src="./assets/javascript/index/index.js"></script>   
 </body>
 
