fixed local storage

--- a/Public/create-recipe.html
+++ b/Public/create-recipe.html
@@ -247,11 +247,27 @@
 <!-- Compiled and minified JavaScript -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 <!-- custom js -->
-<script src="./assets/javascript/dashboard-logic.js"></script>
-<script src="./assets/javascript/openModal.js"></script>
+<!-- <script src="./assets/javascript/mealPlan/index.js"></script> -->
+<!-- <script src="./assets/javascript/modal-logic/openModal.js"></script> -->
 <script src="./assets/javascript/removeInitialChips.js"></script>
-<script id="index" src="./assets/javascript/create-recipe-form/index.js"></script>
+<!-- <script id="index" src="./assets/javascript/create-recipe-form/index.js"></script> -->
 
+<script src="./assets/javascript/removeElement.js"></script>
+<script src="./assets/javascript/modal-logic/renderTimeBar.js"></script>
+<script src="./assets/javascript/modal-logic/shopping-list-logic.js"></script>
+<script src="./assets/javascript/modal-logic/openModal.js"></script>
+<script src="./assets/javascript/noScroll.js"></script>
+<script src="./assets/javascript/getChips.js"></script>
 
+<script src="./assets/javascript/getDropdownValues.js"></script>
+<script src="./assets/javascript/create-recipe-form/addIngredient.js"></script>
+<script src="./assets/javascript/create-recipe-form/addStep.js"></script>
+<script src="./assets/javascript/create-recipe-form/createDeleteBtn.js"></script>
+<script src="./assets/javascript/create-recipe-form/getIngredients.js"></script>
+<script src="./assets/javascript/create-recipe-form/getRecipeFormData.js"></script>
+<script src="./assets/javascript/create-recipe-form/getSteps.js"></script>
+<script src="./assets/javascript/create-recipe-form/uploadImage.js"></script>
+<script src="./assets/javascript/create-recipe-form/publishRecipe.js"></script>
+<script src="./assets/javascript/create-recipe-form/index.js"></script>
 </body>
 </html>
