changed icon to dev-dashboard

--- a/Public/index.html
+++ b/Public/index.html
@@ -215,7 +215,7 @@
         </button>
   
         <a class="footer-button btn-floating" href="/dashboard">
-          <i class="material-icons">dashboard</i>
+          <i class="material-icons">developer_board</i>
         </a>
 
       </div>
