--- a/Public/login.html
+++ b/Public/login.html
@@ -35,7 +35,7 @@
   <body>
     <!-- NavBar -->
     <nav>
-      <h3>Recipedia</h3>
+     <a class="logo" href="/"><h3>Recipedia</h3></a>
       <div class="divider-container">
         <div class="divider">
           <img src="./assets/images/green-chilli.png" alt="" />
