committing to save changes, unfinished

--- a/Public/index.html
+++ b/Public/index.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="coloured-section">
-          <a id="sign-in-button" class="btn-floating waves-effect waves-light z-depth-3" href="/login.html">
+          <a id="sign-in-button" class="btn-floating waves-effect waves-light z-depth-3" href="/login">
             <i class="tiny material-icons">person</i>
           </a>
         </div>
