--- a/Public/index.html
+++ b/Public/index.html
@@ -26,6 +26,9 @@
     <link rel="stylesheet" href="./assets/css/nav.css"/> 
     <link rel="stylesheet" href="./assets/css/index.css"/> 
     <link rel="stylesheet" href="./assets/css/styleHelpers.css"/> 
+    <link rel="stylesheet" href="./assets/css/recipe-modal/visual-info.css"/> 
+    <link rel="stylesheet" href="./assets/css/recipe-modal/recipe.css"/> 
+    <link rel="stylesheet" href="./assets/css/recipe-card.css"/> 
   </head> 
   <body>
     <!-- NavBar -->
