added meta tags for accessbility and SEO, compressed main images

--- a/Public/index.html
+++ b/Public/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Search and create recipes with the world. Generate an supermarket isle shopping list and meal plan for the week.">
+    <meta name="keywords" content="Recipe, mealplan, plan, shopping, list, shopping-list">
     <title>Recipedia</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="./assets/images/favicons/red-chilli-vector.png" >
@@ -33,7 +35,7 @@
       <div class="divider-container">
 
         <div class="divider">
-          <img src="./assets/images/green-chilli.png" alt=""/>
+          <img src="./assets/images/compressed-images/green-chilli.png" alt=""/>
           <div class="divider-bottom"></div>
           <div class="divider-top"></div>
           <div class="divider-filler"></div>
