converted css to minified css

--- a/Public/index.html
+++ b/Public/index.html
@@ -18,15 +18,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
     <!--  MDC icons-->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
-    <!-- custom css -->
-    <link rel="stylesheet" href="./assets/css/tabs.css"/> 
+    <!-- developing css -->
+    <!-- <link rel="stylesheet" href="./assets/css/tabs.css"/> 
     <link rel="stylesheet" href="./assets/css/buttons.css"/> 
     <link rel="stylesheet" href="./assets/css/nav.css"/> 
     <link rel="stylesheet" href="./assets/css/index.css"/> 
     <link rel="stylesheet" href="./assets/css/styleHelpers.css"/> 
     <link rel="stylesheet" href="./assets/css/recipe-modal/visual-info.css"/> 
     <link rel="stylesheet" href="./assets/css/recipe-modal/recipe.css"/> 
-    <link rel="stylesheet" href="./assets/css/recipe-card.css"/> 
+    <link rel="stylesheet" href="./assets/css/recipe-card.css"/>  -->
+    <!-- minified css -->
+    <link rel="stylesheet" href="./assets/css/compressed/index.min.css">
   </head> 
   <body>
     <!-- NavBar -->
@@ -227,7 +229,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <!-- custom js -->
+    <!-- developing custom js -->
     <script src="./assets/javascript/removeInitialChips.js"></script>
     <script src="./assets/javascript/index/spinner.js"></script>   
     <script src="./assets/javascript/index/search.js"></script>   
@@ -238,7 +240,9 @@
     <script src="./assets/javascript/createThumbnail.js"></script>
     <script src="./assets/javascript/index/scrollToView.js"></script>
     <script src="./assets/javascript/noScroll.js"></script>
-    <script src="./assets/javascript/index/index.js"></script>   
+    <script src="./assets/javascript/index/index.js"></script>
+    <!-- minified js -->
+
 </body>
 
 </html>
